--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="https://talkativeblog.hashnode.dev">Blog</a></li>
         </ul>
       </nav>
-      <a class="cta" href="#">View On Github</a>
+      <a class="cta" href="https://github.com/TalkativeDiv/TalkativeFoods">View On Github</a>
       <p class="menu cta">Menu</p>
     </header>
     <div id="mobile__menu" class="overlay">
